# MARS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  task.md  walkthrough.md
configs/: risk_thresholds.yaml  service.yaml
data/: track_sensor_dataset.csv
data_contracts/: README.md
docs/: MARS_Practical_Hardware_Software_Integration_Plan.docx  build_mars_hardware_doc.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Dashboard.tsx  ModelPerformance.tsx  RiskEvaluator.tsx  SecurityMonitor.tsx
frontend/src/utils/: api.ts
huggingface_space/: README.md  app.py  mars-engine-risk.joblib  mars-track-risk.joblib  mars-weather-risk.joblib  requirements.txt
notebooks/: MARS_Training.ipynb  README.md  engine_risk_colab_template.md  security_anomaly_colab_template.md  track_risk_colab_template.md  weather_risk_colab_template.md
scripts/: simulate_sensors.py  smoke_test.sh
src/mars_ml_pipeline/: __init__.py  artifact.py  config.py  event_bus.py  features.py  recommendations.py  regions.py  schemas.py
src/mars_ml_pipeline/data/: generate_synthetic.py
src/mars_ml_pipeline/models/: __init__.py  base.py  rule_based.py  sklearn_adapter.py
src/mars_ml_pipeline/services/: __init__.py  app.py  security.py
src/mars_ml_pipeline/training/: __init__.py  common.py  export_security_detector.py  train_engine_risk.py  train_track_risk.py  train_weather_risk.py
tests/: test_features.py
