[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-ml-pipeline"
version = "0.1.0"
description = "MARS railway risk and anomaly model pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "prometheus-client>=0.20",
  "pyyaml>=6.0",
  "requests>=2.31",
  "urllib3<2",
]

[project.optional-dependencies]
security = [
  "pillow>=10.0",
  "opencv-python-headless>=4.9",
  "ultralytics>=8.2",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
